--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring.kafka:
     auto-offset-reset: latest
     key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+logging.level:
+  org.springframework.web: DEBUG
+  com.dotterbear: DEBUG
